# LITE

./: .gitignore  README.md  analyze_full_ucr.py  changelog.md  generate_plots.py  kaggle notebook.ipynb  main.py  pyproject.toml  requirements.txt
docs/Ai for Time Series report/: check_means.py  generate_plots.py  report.aux  report.fdb_latexmk  report.fls  report.synctex(busy)  report.tex
docs/report/: conference_101719.aux  conference_101719.fdb_latexmk  conference_101719.fls  conference_101719.out  conference_101719.tex
experimentation_results/: adamw_results.csv  adamw_znorm.csv  batch_128.csv  batch_32.csv  fast_subset_baseline.csv  global_min_max.csv  global_znormalization.csv  globalz_and_differentiated_channel.csv  gz_diff_and_learnable_filters.csv  gz_diff_learn_adamw.csv
experimentation_results/full_ucr/: gz_adamw_diff.csv  no_change_reproduced_results_ucr.csv
experimentation_results/reproduced_results/: average_reproduced.csv
reproduced_results/: no_change_reproduced_results_ucr.csv
results/LITE/: results_ucr.csv
results/LITE/run_0/Cricket/: best_model.keras  dict_emissions.json
results/LITE/run_0/CricketX/: best_model.keras  dict_emissions.json
results/LITE/run_1/CricketX/: best_model.keras  dict_emissions.json
results/LITE/run_2/CricketX/: best_model.keras  dict_emissions.json
results/LITE/run_3/CricketX/: best_model.keras  dict_emissions.json
results/LITE/run_4/CricketX/: best_model.keras  dict_emissions.json
results/LITEMV/: results_ucr.csv
results/LITEMV/run_0/Cricket/: best_model.keras  dict_emissions.json
src/classifiers/: __init__.py  lite.py  lite_custom_learning.py  litemv.py
src/utils/: __init__.py  utils.py
